# zendesk-rs

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.devcontainer/: devcontainer.json
.github/workflows/: audit.yaml  ci.yaml  docs.yaml  github-pages-rust-doc.yaml  rust-ci.yaml
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
src/: lib.rs
src/resources/: mod.rs
src/resources/oauth_tokens/: models.rs
src/resources/tickets/: handlers.rs  models.rs
src/zendesk/: lib.rs.html
src/zendesk/resources/: mod.rs.html
src/zendesk/resources/oauth_tokens/: mod.rs.html  models.rs.html
src/zendesk/resources/tickets/: handlers.rs.html  mod.rs.html  models.rs.html
zendesk/: all.html  index.html  sidebar-items.js  struct.Client.html
zendesk/resources/: index.html  sidebar-items.js
zendesk/resources/tickets/: index.html  sidebar-items.js
zendesk/resources/tickets/handlers/: fn.get_ticket.html  index.html  sidebar-items.js
zendesk/resources/tickets/models/: index.html  sidebar-items.js  struct.Address.html  struct.SatisfactionRating.html  struct.Source.html  struct.Ticket.html  struct.TicketWrapper.html  struct.Via.html
